# functorial-fission

./: .gitignore  LICENSE  README.md
code/: CHANGELOG.md  functorial-fission.cabal
code/src/: FunctorialFission.hs  Main.hs
code/src/FunctorialFission/: Coalgebra.hs  Core.hs  Functor.hs  Reactor.hs  SEMF.hs  TypeSafe.hs
code/test/: Main.hs
docs/: index.html  simulation.html  social-preview.html  twitter-card.html
latex/: main.tex
