cabal-version:      3.0
name:               functorial-fission
version:            0.1.0.0
synopsis:           A categorical framework for nuclear fission physics
description:
    This library provides a functorial formulation of nuclear fission,
    treating nuclear states as objects in a symmetric monoidal category
    and fission processes as morphisms. The binding energy function is
    elevated to a functor, conservation laws emerge as structural constraints,
    and chain-reaction dynamics are modeled coalgebraically.

license:            MIT
license-file:       LICENSE
author:             Matthew Long
maintainer:         matthew@magneton.ai
copyright:          (c) 2025 Matthew Long
category:           Physics, Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:        GHC == 9.4.8, GHC == 9.6.3

source-repository head
    type:     git
    location: https://github.com/mlong/functorial-fission.git

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import:           warnings
    exposed-modules:
        FunctorialFission
        FunctorialFission.Core
        FunctorialFission.SEMF
        FunctorialFission.Functor
        FunctorialFission.Coalgebra
        FunctorialFission.Reactor
        FunctorialFission.TypeSafe
    build-depends:
        base >= 4.16 && < 5
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        BangPatterns
        OverloadedStrings

executable functorial-fission-demo
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.16 && < 5
      , functorial-fission
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite functorial-fission-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >= 4.16 && < 5
      , functorial-fission
